# chain-pipe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
config/: enrich-pair.toml  pair-enricher.toml  price-injector.toml  price-sink.toml  source-uniswap.toml  uniswap-source.toml
crates/chain-model/: Cargo.toml
crates/chain-model/src/: lib.rs
crates/enrich-pair/: Cargo.toml
crates/enrich-pair/src/: erc20.rs  init.rs  main.rs  mq.rs
crates/pair-enricher/: Cargo.toml
crates/pair-enricher/src/: erc20.rs  init.rs  main.rs  mq.rs  pair_erc20.rs
crates/price-injector/: Cargo.toml
crates/price-injector/src/: init.rs  main.rs  mq.rs
crates/price-sink/: Cargo.toml
crates/price-sink/src/: init.rs  main.rs  mq.rs  tsdb.rs
crates/source-dex/: Cargo.toml
crates/source-uniswap/: Cargo.toml  Dockerfile
crates/source-uniswap/config/: default.toml
crates/source-uniswap/src/: init.rs  main.rs  mq.rs  uni.rs  uni_v2.rs
crates/uniswap-source/: Cargo.toml
crates/uniswap-source/src/: init.rs  main.rs  mq.rs  uni.rs
data/: pair_sync.json  topic_msg.json
doc/: dev-log.md
docker/: docker-compose.dataflow.yml  docker-compose.tsdb.yml
docker/arroyo/: README.md  docker-compose.yml
docker/fluvio/: README.md  docker-compose.yml  i.Dockerfile
docker/nats/: docker-compose.yml
docker/pg/: docker-compose.yml
docker/risingwave/: README.md  docker-compose.yml
