[workspace]
resolver = "2"
members = ["crates/pair-enricher", "crates/price-injector", "crates/uniswap-source"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Configuration
clap = { version = "4.5.42", default-features = false}
config = { version = "0.15.13", default-features = false } # TOML/ENV hierarchical config loader

# Serialization
serde = { version = "1.0.219"} # Struct ⇄ JSON/TOML/CSV
serde_json = "1.0.142"  # JSON de/serialization

# Error handling
eyre = "0.6.12" # Context-rich anyhow-style errors

# Logging & Tracing
tracing = "0.1.41" # Structured, scoped, async-aware logging facade
tracing-subscriber = { version = "0.3.19", default-features = false}

# Async runtime
tokio = { version = "1.47.1", default-features = false}

# Stream
futures-util = { version = "0.3.31", default-features = false}

# Message Queue
async-nats = { version = "0.42.0", default-features = false}

# Ethereum
alloy = { version = "1.0.25", default-features = false }
