[workspace]
resolver = "2"
members = [
    "crates/chain-model",
    "crates/pair-enricher",
    "crates/price-injector",
    "crates/price-sink",
    "crates/uniswap-source",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Configuration
clap = { version = "4.5.42", default-features = false }
# TOML/ENV hierarchical config loader
config = { version = "0.15.13", default-features = false }
# Struct ⇄ JSON/TOML/CSV
serde = { version = "1.0.219", default-features = false }
# JSON de/serialization
serde_json = { version = "1.0.142", default-features = false }
# Error handling
eyre = { version = "0.6.12", default-features = false }
# Logging & Tracing
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
# Async runtime
tokio = { version = "1.47.1", default-features = false }

# Stream
futures-util = { version = "0.3.31", default-features = false }
# Message Queue
async-nats = { version = "0.42.0", default-features = false }
# Ethereum
alloy = { version = "1.0.25", default-features = false }
# TSDB
tokio-postgres = { version = "0.7.13", default-features = false }
deadpool-postgres = { version = "0.14.1", default-features = false }
chrono = { version = "0.4.41", default-features = false }
