[package]
name = "enrich-pair"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enrich-pair"
path = "src/main.rs"

[dependencies]
clap          = { workspace = true }
config        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
eyre          = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tokio         = { workspace = true }
async-nats    = { workspace = true }
futures-util  = { workspace = true }
alloy         = { workspace = true }