[package]
name = "price-sink"
version.workspace = true
edition.workspace = true

[dependencies]
chain-model = { path = "../chain-model" }

clap = { workspace = true, features = ["derive", "std"] }
config = { workspace = true, features = ["toml"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
eyre = { workspace = true, features = ["auto-install"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "runtime"] }
async-nats = { workspace = true, features = ["ring"] }
deadpool-postgres = { workspace = true, features = ["rt_tokio_1"] }
chrono = { workspace = true ,features = ["serde"]}
futures-util = { workspace = true, features = ["async-await"] }