[package]
name = "price-sink"
version.workspace = true
edition.workspace = true

[dependencies]
chain-model = { path = "../chain-model" }

clap = { workspace = true, features = ["derive", "std"] }
config = { workspace = true, features = ["toml"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
eyre = { workspace = true, features = ["auto-install"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

async-nats = { workspace = true, features = ["ring"] }
futures-util = { workspace = true, features = ["async-await"] }

sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
] }
chrono = { workspace = true ,features = ["serde"]}
bigdecimal  = { workspace = true, features = ["std"] }