[package]
name = "source-uniswap"
version.workspace = true
edition.workspace = true

[dependencies]
clap  = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fluvio = { workspace = true }
tokio = { workspace = true }
# chrono = { workspace = true }
alloy = { workspace = true }
futures-util = { workspace = true }
