[package]
name = "source-uniswap"
version.workspace = true
edition.workspace = true

[[bin]]
name = "source-uniswap"
path = "src/main.rs"

[dependencies]
clap  = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# fluvio = { workspace = true }
tokio = { workspace = true }
# chrono = { workspace = true }
alloy = { workspace = true, features = [
    "std",
    "provider-ws",
    "rpc-types",
    "contract",
] }
futures-util = { workspace = true }
async-nats = { workspace = true }
